Fix regression in KFileItem: refresh() would lose the file type, so a dir became a file.

Many thanks to Kai Dombrowe for the simple and fully reproduceable steps
(which are now coded in the unittest).

CCMAIL: markg85@gmail.com
Mark, this is why existing code should be refactored (i.e. moved) rather
than replaced. See also the BUG comment below, I think we have to stop using
this constructor.

BUG: 353195
FIXED-IN: 5.22